multiplayer_ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: dboxservice1
  labels:
    app: dboxservice1
spec:
  ports:
  - port: 80
    targetPort: 80  
    name: http
  selector:
    app: dbox1
  type: ClusterIP  

---
apiVersion: v1
kind: Service
metadata:
  name: dboxipxservice1
spec:
  selector:
    app: dbox1
  ports:
    - protocol: UDP
      port: 19900
      targetPort: 19900
  type: ClusterIP     
  
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: dbox1
spec:
  selector:
    matchLabels:
      app: dbox1
  replicas: 1
  template:
    metadata:
      labels:
        app: dbox1
    spec:
      containers:
      - name: dboxk8s
        image: "blaize/keen"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dboxservice2
  labels:
    app: dboxservice2
spec:
  ports:
  - port: 80
    targetPort: 80  
    name: http
  selector:
    app: dbox2
  type: ClusterIP  
---
apiVersion: v1
kind: Service
metadata:
  name: dboxipxservice2
spec:
  selector:
    app: dbox2
  ports:
    - protocol: UDP
      port: 19900
      targetPort: 19900
  type: ClusterIP           
  
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: dbox2
spec:
  selector:
    matchLabels:
      app: dbox2
  replicas: 1
  template:
    metadata:
      labels:
        app: dbox2
    spec:
      containers:
      - name: dboxk8s
        image: "blaize/keen"
        ports:
        - containerPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dosbox-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
  - host: 
    http: 
      paths:
      - path: /dosbox1
        pathType: Prefix
        backend:
          service:
            name: dboxservice1
            port:
              number: 80
      - path: /dosbox2
        pathType: Prefix
        backend:
          service:
            name: dboxservice2  
            port:
              number: 80
